[package]
name = "jupiter-fsw"
version = "0.1.0"
edition = "2024"

[dependencies]
bin-packets = { git = "https://github.com/Terminus-Suborbital-Research-Program/AMALTHEA.git" }
bincode = "2.0.1"
env_logger = "0.11.7"
log = { version = "0.4.26", features = ["std"] }
nix = "0.29.0"
serde_json = "1.0.140"
sqlite = "0.36.2"
